--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -39,7 +39,7 @@
     
       <ul class="footer-nav-list">
         <li class="footer-nav-list__item">
-          <a href="/" class="footer-nav-list__link">Home</a>
+          <a href="#header" class="footer-nav-list__link">Home</a>
         </li>
         <li class="footer-nav-list__item">
           <a href="#proces" class="footer-nav-list__link">How it’s made?</a>
