--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -13,23 +13,17 @@
 
   flex-wrap: wrap;
   @media (min-width: 768px) {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: flex-start;
+    @include flex( space-between, row, nowrap, flex-start);
   }
 
-  border-bottom: 1px solid #ffffff;
+  border-bottom: 1px solid #ffffff10;
   margin-bottom: 34px;
 }
 }
 .chocomood__text {
   font-family: ('Montserrat');
-  font-weight: 500;
-  font-size: 24px;
-
-  line-height: 1.17;
-  letter-spacing: 0.02em;
+  @include text( 24px, 500, 1.29, -0.02em);
+  
   color: getColor('white');
   max-width: 300px;
   margin-bottom: 31px;
@@ -40,12 +34,11 @@
 }
 .footer__con {
   display: flex;
-  flex-direction: row;
-  justify-content:space-between;
+  @include flex( space-between, row, nowrap,);
   padding-bottom: 64px;
 }
 .footer-contacts {
-  margin-top: 36px;
+ 
 
   display: flex;
   align-items: flex-start;
@@ -55,22 +48,17 @@
   @media (min-width: 768px) {
     margin-top: 0;
   }
-  @media (min-width: 1200px) {
-    margin-top: 0;
-  }
+ 
   &__title {
-    margin-bottom: 17px;
+    margin-bottom: 14px;
     font-family: ('Montserrat');
-    font-weight: 500;
-    font-size: 14px;
-  
-    line-height: 1.29;
-    text-align: center;
+    @include text(17px, 500, 1.29, -0.02em, center);
     color: getColor('white');
     @media(min-width: 768px){
         margin-bottom: 11px;
 
     }
+
   }
   &__connection {
     font-family: getFont('Montserrat');
@@ -78,22 +66,39 @@
     font-size: 14px;
   
     line-height: 1.29;
-    letter-spacing: 0.02em;
+    letter-spacing: -0.02em;
     text-align: center;
     color: getColor('white');
+    
+  
+  &:hover {
+    
+    color: getColor('orange');
+
   }
+}
 }
 
 
 .footer-media {
   display: flex;
   flex-direction: row;
-  gap: 13px;
+  gap: 15px;
+  margin-left: 65px;
+  @media (min-width:768px){
+    gap: 20px;
+  }
 
 &__svg {
   width: 22px;
   height: 22px;
   fill: getColor('white');
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  &:hover {
+   
+    fill: getColor('orange');
+    
+  }
 }
 }
 .footer-nav-list {
@@ -109,21 +114,14 @@
 
 &__link {
   font-family: getFont('Montserrat');
-  font-weight: 500;
-  font-size: 14px;
-
-  line-height: 114%;
-  letter-spacing: -0.02em;
+  @include text(14px, 500, 1.14, -0.02em, center);
   color: getColor('white');
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-&::after {
-  content: '';
 
-// .footer-nav-list__link:hover::after{
-//     color: aqua;
-// }
-&:hover {
-  color: antiquewhite;
+
+&__link:hover {
+  color: getColor("orange");
 }
-}
+
 }
