change hero html

--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -11,6 +11,7 @@
             <button
               class="hero-options__btn hero-options__btn--light"
               type="button"
+              data-open-buy
             >
               Buy now
             </button>
