--- a/src/sass/components/_reviews.scss
+++ b/src/sass/components/_reviews.scss
@@ -1,8 +1,139 @@
 .swiper {
-    height: 288px;
-    @media screen and (min-width: 1200px) {
-      height: 297px;
-    }
+  height: 288px;
+  @media screen and (min-width: 1200px) {
+    height: 297px;
   }
+}
+
+.swiper-pagination {
+  display: flex;
+  gap: 13px;
+}
+
+.swiper-pagination-bullet {
+  width: 13px;
+  height: 13px;
+  background-color: rgba(17, 17, 17, 0.3);
+}
+
+.swiper-pagination-bullet-active {
+  width: 28px;
+  background-color: getColor('text-third');
+  border-radius: 15px;
+}
+
+.reviews {
+padding-top: 72px;
+padding-bottom: 72px;
+@media screen and (min-width: 768px) {
+  padding-top: 100px;
+  padding-bottom: 100px;
+}
+@media screen and (min-width: 1200px) {
+  padding-top: 128px;
+  padding-bottom: 128px;
+}
+}
+.reviews-title {
+display: block;
+text-align: center;
+color: ;
+font-weight: 600;
+text-transform: uppercase;
+font-size: 20px;
+line-height: 24px;
+letter-spacing: -0.6px;
+margin-bottom: 74px;
+
+@media screen and (min-width: 768px) {
+  font-size: 24px;
+  margin-bottom: 91px;
+  line-height: 28px;
+  letter-spacing: -0.72px;
+}
+}
+.reviews-list {
+display: flex;
+margin-bottom: 20px;
+@media screen and (min-width: 768px) {
+  margin-bottom: 31px;
+}
+}
+.reviews-list__item {
+display: flex;
+flex-direction: column;
+justify-content: center;
+position: relative;
+padding-top: 56px;
+padding-right: 18px;
+padding-bottom: 26px;
+padding-left: 18px;
+border-radius: 15px;
+border: 1px solid $;
+width: 360px;
+height: 200px;
+&:first-child {
+  padding-bottom: 42px;
+}
+@media screen and (min-width: 768px) {
+  padding-right: 16px;
+  padding-left: 16px;
+}
+@media screen and (min-width: 1200px) {
+  padding-right: 24px;
+  padding-left: 24px;
+}
+}
+.reviews-card__img {
+width: 80px;
+position: absolute;
+top: -42px;
+left: 50%;
+transform: translate(-50%, 0%);
+}
+.reviews-card__name {
+
+margin-bottom: 24px;
+text-align: center;
+}
+.reviews-card__description {
+
+}
+.reviews__btn {
+background-color: transparent;
+width: 165px;
+border-radius: 100px;
+padding: 12px 28px;
+border: 1px solid ;
+display: flex;
+justify-content: center;
+margin-right: auto;
+margin-left: auto;
+transition-duration: 250ms;
+transition-timing-function: ease-in;
+transition-delay: 55ms;
+@include subtitle();
+font-size: 14px;
+&:hover {
+  color: ;
+  background-color: ;
+}
+@media screen and (min-width: 768px) {
+  width: 222px;
+  padding: 14px 40px;
+  font-size: 18px;
+}
+}
+.reviews-slider {
+position: relative;
+padding-top: 42px;
+overflow: hidden;
+margin-bottom: 32px;
+@media screen and (min-width: 768px) {
+  margin-bottom: 50px;
+}
+}
+
+
 
   
