--- a/src/partials/ingredients.html
+++ b/src/partials/ingredients.html
@@ -17,53 +17,51 @@
             <source
               media="(min-width: 1200px)"
               srcset="
-                ./images/descingredients1.jpg,
-                ./images/descingredients1@2x.jpg
+                ./images/descingredients1.png,
+                ./images/descingredients1@2x.png
               "
             />
             <source
               media="(max-width: 767px)"
               srcset="
-                ./images/tabingredients1.jpg,
-                ./images/tabingredients1@2x.jpg
+                ./images/tabingredients1.png,
+                ./images/tabingredients1@2x.png
               "
             />
             <source
               media="(min-width: 768px)"
               srcset="
-                ./images/tabingredients1.jpg,
-                ./images/tabingredients1@2x.jpg
+                ./images/tabingredients1.png,
+                ./images/tabingredients1@2x.png
               "
             />
             <img
               class="ingredients-card__img"
-              src="./images/tabingredients1.jpg"
+              src="./images/tabingredients1.png"
               alt="Milk Chocolate Photo"
             />
           </picture>
           <h4 class="ingredients-card__title">MILK CHOCOLATE</h4>
         </div>
         <div class="ingredients-thumb">
-            <h5 class="ingredients-thumb__title">Milk chocolate</h5>
-            <div class="ingredients-thumb-btns-block">
-              <button type="button" class="ingredients-thumb__btn">
-                chocolate
-              </button>
-              <button type="button" class="ingredients-thumb__btn-benefit">
-                the benefits
-              </button>
-            </div>
-            <div class="ingredients-scroll-block">
-              <p class="ingredients-thumb__text">
-                Milk chocolate is a solid chocolate confectionery containing
-                cocoa, sugar and milk. It is the most consumed type of
-                chocolate. Chocolate was originally sold and consumed as a
-                beverage in pre-Columbian times. Although four-fifths of all
-                milk chocolate is sold in the United States and Europe,
-                increasingly large amounts are consumed in China and Latin
-                America.
-              </p>
-            </div>
+          <h5 class="ingredients-thumb__title">Milk chocolate</h5>
+          <div class="ingredients-thumb-btns-block">
+            <button type="button" class="ingredients-thumb__btn">
+              chocolate
+            </button>
+            <button type="button" class="ingredients-thumb__btn-benefit">
+              the benefits
+            </button>
+          </div>
+          <div class="ingredients-scroll-block">
+            <p class="ingredients-thumb__text">
+              Milk chocolate is a solid chocolate confectionery containing
+              cocoa, sugar and milk. It is the most consumed type of chocolate.
+              Chocolate was originally sold and consumed as a beverage in
+              pre-Columbian times. Although four-fifths of all milk chocolate is
+              sold in the United States and Europe, increasingly large amounts
+              are consumed in China and Latin America.
+            </p>
           </div>
         </div>
       </li>
@@ -73,51 +71,50 @@
             <source
               media="(min-width: 1200px)"
               srcset="
-                ./images/descingredients2.jpg,
-                ./images/descingredients2@2x.jpg
+                ./images/descingredients2.png,
+                ./images/descingredients1@2x.png
               "
             />
             <source
               media="(max-width: 767px)"
               srcset="
-                ./images/tabingredients2.jpg,
-                ./images/tabingredients2@2x.jpg
+                ./images/tabingredients2.png,
+                ./images/tabingredients2@2x.png
               "
             />
             <source
               media="(min-width: 768px)"
               srcset="
-                ./images/tabingredients2.jpg,
-                ./images/tabingredients2@2x.jpg
+                ./images/tabingredients2.png,
+                ./images/tabingredients2@2x.png
               "
             />
             <img
               class="ingredients-card__img"
-              src="./images/tabingredients2.jpg"
+              src="./images/tabingredients2.png"
               alt="Milk Photo"
             />
           </picture>
           <h4 class="ingredients-card__title">MILK</h4>
         </div>
         <div class="ingredients-thumb">
-            <h5 class="ingredients-thumb__title">Milk</h5>
-            <div class="ingredients-thumb-btns-block">
-              <button type="button" class="ingredients-thumb__btn">milk</button>
-              <button type="button" class="ingredients-thumb__btn-benefit">
-                the benefits
-              </button>
-            </div>
-            <div class="ingredients-scroll-block">
-              <p class="ingredients-thumb__text">
-                Milk is a white liquid food produced by the mammary glands of
-                mammals. It is the primary source of nutrition for young mammals
-                (including breastfed human infants) before they are able to
-                digest solid food.Early-lactation milk, which is called
-                colostrum, contains antibodies that strengthen the immune
-                system, and thus reduces the risk of many diseases. Milk
-                contains many nutrients, including protein and lactose.
-              </p>
-            </div>
+          <h5 class="ingredients-thumb__title">Milk</h5>
+          <div class="ingredients-thumb-btns-block">
+            <button type="button" class="ingredients-thumb__btn">milk</button>
+            <button type="button" class="ingredients-thumb__btn-benefit">
+              the benefits
+            </button>
+          </div>
+          <div class="ingredients-scroll-block">
+            <p class="ingredients-thumb__text">
+              Milk is a white liquid food produced by the mammary glands of
+              mammals. It is the primary source of nutrition for young mammals
+              (including breastfed human infants) before they are able to digest
+              solid food.Early-lactation milk, which is called colostrum,
+              contains antibodies that strengthen the immune system, and thus
+              reduces the risk of many diseases. Milk contains many nutrients,
+              including protein and lactose.
+            </p>
           </div>
         </div>
       </li>
@@ -127,54 +124,49 @@
             <source
               media="(min-width: 1200px)"
               srcset="
-                ./images/descingredients3.jpg,
-                ./images/descingredients3@2x.jpg
+                ./images/descingredients3.png,
+                ./images/descingredients3@2x.png
               "
             />
             <source
               media="(max-width: 767px)"
               srcset="
-                ./images/tabingredients3.jpg,
-                ./images/tabingredients3@2x.jpg
+                ./images/tabingredients3.png,
+                ./images/tabingredients3@2x.png
               "
             />
             <source
               media="(min-width: 768px)"
               srcset="
-                ./images/tabingredients3.jpg,
-                ./images/tabingredients3@2x.jpg
+                ./images/tabingredients3.png,
+                ./images/tabingredients3@2x.png
               "
             />
             <img
               class="ingredients-card__img"
-              src="./images/tabingredients3.jpg"
+              src="./images/tabingredients3.png"
               alt="Milk Chocolate Photo"
             />
           </picture>
           <h4 class="ingredients-card__title">NUTS</h4>
         </div>
         <div class="ingredients-thumb">
-          <div class="ingredients-thumb__box">
-            <h5 class="ingredients-thumb__title">Nuts</h5>
-            <div class="ingredients-thumb-btns-block">
-              <button type="button" class="ingredients-thumb__btn">
-                Nuts
-              </button>
-              <button type="button" class="ingredients-thumb__btn-benefit">
-                the benefits
-              </button>
-            </div>
-            <div class="ingredients-scroll-block">
-              <p class="ingredients-thumb__text">
-                Almonds, pistachios, and walnuts are some types of nuts that
-                contain healthy nutrients. When eaten as part of a
-                nutrient-dense diet, these 9 nuts may offer benefits such as
-                reducing your risk of heart disease. They’re a good source of
-                fiber, healthy fats, and plant protein. Plus, they’re great on
-                their own, paired with fruit, or added to dishes like salads,
-                desserts, and grains.
-              </p>
-            </div>
+          <h5 class="ingredients-thumb__title">Nuts</h5>
+          <div class="ingredients-thumb-btns-block">
+            <button type="button" class="ingredients-thumb__btn">Nuts</button>
+            <button type="button" class="ingredients-thumb__btn-benefit">
+              the benefits
+            </button>
+          </div>
+          <div class="ingredients-scroll-block">
+            <p class="ingredients-thumb__text">
+              Almonds, pistachios, and walnuts are some types of nuts that
+              contain healthy nutrients. When eaten as part of a nutrient-dense
+              diet, these 9 nuts may offer benefits such as reducing your risk
+              of heart disease. They’re a good source of fiber, healthy fats,
+              and plant protein. Plus, they’re great on their own, paired with
+              fruit, or added to dishes like salads, desserts, and grains.
+            </p>
           </div>
         </div>
       </li>
@@ -184,54 +176,52 @@
             <source
               media="(min-width: 1200px)"
               srcset="
-                ./images/descingredients4.jpg,
-                ./images/descingredients4@2x.jpg
+                ./images/descingredients4.png,
+                ./images/descingredients4@2x.png
               "
             />
             <source
               media="(max-width: 767px)"
               srcset="
-                ./images/tabingredients4.jpg,
-                ./images/tabingredients4@2x.jpg
+                ./images/tabingredients4.png,
+                ./images/tabingredients4@2x.png
               "
             />
             <source
               media="(min-width: 768px)"
               srcset="
-                ./images/tabingredients4.jpg,
-                ./images/tabingredients4@2x.jpg
+                ./images/tabingredients4.png,
+                ./images/tabingredients4@2x.png
               "
             />
             <img
               class="ingredients-card__img"
-              src="./images/tabingredients4.jpg"
+              src="./images/tabingredients4.png"
               alt="Semi Photo"
             />
           </picture>
           <h4 class="ingredients-card__title">SEMI - SWEET CHOCOLATE</h4>
         </div>
         <div class="ingredients-thumb">
-          <div class="ingredients-thumb__box">
-            <h5 class="ingredients-thumb__title">semi - sweet chocolate</h5>
-            <div class="ingredients-thumb-btns-block">
-              <button type="button" class="ingredients-thumb__btn">
-                sweet chocolate
-              </button>
-              <button type="button" class="ingredients-thumb__btn-benefit">
-                the benefits
-              </button>
-            </div>
-            <div class="ingredients-scroll-block-last">
-              <p class="ingredients-thumb__text">
-                Semi-sweet chocolate has a cocoa solid content of 35 to 65%. One
-                of the best ways to gain an understanding of this type of
-                chocolate is to compare it to a different type of chocolate.
-                Semisweet is darker than milk chocolate. In a taste comparison,
-                it has a slightly bitter taste whereas milk chocolate is sweeter
-                and more mellow. This delectable flavor of chocolate is very
-                versatile.
-              </p>
-            </div>
+          <h5 class="ingredients-thumb__title">semi - sweet chocolate</h5>
+          <div class="ingredients-thumb-btns-block">
+            <button type="button" class="ingredients-thumb__btn">
+              sweet chocolate
+            </button>
+            <button type="button" class="ingredients-thumb__btn-benefit">
+              the benefits
+            </button>
+          </div>
+          <div class="ingredients-scroll-block-last">
+            <p class="ingredients-thumb__text">
+              Semi-sweet chocolate has a cocoa solid content of 35 to 65%. One
+              of the best ways to gain an understanding of this type of
+              chocolate is to compare it to a different type of chocolate.
+              Semisweet is darker than milk chocolate. In a taste comparison, it
+              has a slightly bitter taste whereas milk chocolate is sweeter and
+              more mellow. This delectable flavor of chocolate is very
+              versatile.
+            </p>
           </div>
         </div>
       </li>
