--- a/src/sass/utils/_mixin.scss
+++ b/src/sass/utils/_mixin.scss
@@ -7,8 +7,8 @@
 ) {
   font-size: $font-size;
   font-weight: $font-weight;
-  letter-spacing: $line-height;
-  line-height: $letter-spacing;
+  letter-spacing: $letter-spacing;
+  line-height: $line-height;
   text-align: $text-align;
 }
 @mixin flex(
