--- a/src/partials/buy-now.html
+++ b/src/partials/buy-now.html
@@ -1,5 +1,5 @@
 <div class="backdrop is-hidden" backdrop-buy>
-  <form class="modal" id="modal">
+  <form class="modal-buy" id="modal">
     <button class="product-modal__close" data-close-buy type="button">
       <svg class="modal-close__svg">
         <use href="/src/images/icons/symbol-defs.svg#icon-close"></use>
@@ -17,13 +17,13 @@
           <source
             media="(min-width: 320px)"
             srcset="
-              /src/images/mobbuynow1.png    1x,
-              /src/images/mobbuynow1@2x.png 2x
+              ./src/images/mobbuynow1.png    1x,
+              ./src/images/mobbuynow1@2x.png 2x
             "
           />
 
           <img
-            src="/src/images/mobbuynow1.png"
+            src="./src/images/mobbuynow1.png"
             class="products-modal-item__img"
             alt="100g"
           />
@@ -37,12 +37,12 @@
           <source
             media="(min-width: 320px)"
             srcset="
-              /src/images/mobbuynow2.png    1x,
-              /src/images/mobbuynow2@2x.png 2x
+              ./src/images/mobbuynow2.png    1x,
+              ./src/images/mobbuynow2@2x.png 2x
             "
           />
           <img
-            src="/src/images/mobbuynow2.png"
+            src="./src/images/mobbuynow2.png"
             class="products-modal-item__img"
             alt="200g"
           />
@@ -56,12 +56,12 @@
           <source
             media="(min-width: 320px)"
             srcset="
-              /src/images/mobbuynow3.png    1x,
-              /src/images/mobbuynow3@2x.png 2x
+              ./src/images/mobbuynow3.png    1x,
+              ./src/images/mobbuynow3@2x.png 2x
             "
           />
           <img
-            src="/src/images/mobbuynow3.png"
+            src="./src/images/mobbuynow3.png"
             class="products-modal-item__img"
             alt="300g"
           />
@@ -75,56 +75,70 @@
     <div class="person-info-block">
       <label class="person-info" for="person__Name"
         >Personal information
-        <input type="text" placeholder="Name" class="person-info__input" />
+        <input type="text" placeholder="Name" class="person-info__input" id="person__Name" maxlength="17" required />
       </label>
-      <label class="person-info__second-label" id="person__Surname">
         <input
           type="text"
           placeholder="Surname"
+          id="person__Name"
           class="person-info__second-input"
+          minlength="3"
+          required
         />
-      </label>
+      
     </div>
     <ul class="other-information-list">
       <li class="other-information-list__item">
-        <label class="other-information-list__label" id="other__Email">
+        <label class="other-information-list__label" for="other__Email">
           Email
           <input
             type="text"
             placeholder="Enter your email"
             class="other-information-list__input"
+            id="other__Email"
+            minlength="7"
+            required
           />
         </label>
       </li>
       <li class="other-information-list__item">
-        <label class="other-information-list__label" id="other__Tel"
+        <label class="other-information-list__label" for="other__Tel"
           >Phone number
           <input
             type="text"
             placeholder="Phone number"
             class="other-information-list__input"
+            id="other__Tel"
+            maxlength="40"
+            minlength="5"
+            required
           />
         </label>
       </li>
       <li class="other-information-list__item">
-        <label class="other-information-list__label" id="other__Card"
+        <label class="other-information-list__label" for="other__Card"
           >Card number
           <input
             type="text"
             placeholder="Enter card"
             class="other-information-list__input"
+            id="other__Card"
+            minlength="7"
+            required
           />
           <svg class="other-information-list-label__svg">
-            <use href="/src/images/icons/symbol-defs.svg#icon-mastercard"></use>
+            <use href="./src/images/icons/symbol-defs.svg#icon-mastercard"></use>
           </svg>
         </label>
       </li>
       <li class="other-information-list__item">
-        <label class="other-information-list__label" id="other__Comment"
+        <label class="other-information-list__label" for="other__Comment"
           >Comment
           <textarea
             placeholder="Enter text"
             class="other-information-list__textarea"
+            id="other__Comment"
+            maxlength="1200"
           ></textarea>
         </label>
       </li>
