--- a/src/sass/components/_hero.scss
+++ b/src/sass/components/_hero.scss
@@ -66,7 +66,7 @@
     min-width: 250px;
   }
   &__pages {
-    @include flex($flex-direction: row);
+    @include flex($flex-direction: column, $align-items: flex-start);
     gap: 32px;
     @media (max-width: 364px) {
       align-items: center;
