--- a/src/partials/burger-menu.html
+++ b/src/partials/burger-menu.html
@@ -13,7 +13,7 @@
         <a href="#proces" class="menu-nav__link">How it’s made?</a>
       </li>
       <li class="menu-nav__item">
-        <a href="#product" class="menu-nav__link">Our products</a>
+        <a href="#products" class="menu-nav__link">Our products</a>
       </li>
       <li class="menu-nav__item">
         <a href="#sellers" class="menu-nav__link">Top sellers</a>
