--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -23,7 +23,7 @@
             <a href="#proces" class="nav-list__link">How it’s made? </a>
           </li>
           <li class="nav-list__item">
-            <a href="#product" class="nav-list__link">Our products </a>
+            <a href="#products" class="nav-list__link">Our products </a>
           </li>
           <li class="nav-list__item">
             <a href="#sellers" class="nav-list__link">Top sellers </a>
