--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -17,9 +17,9 @@
             </button>
           </li>
           <li class="hero-options__item">
-            <button class="hero-options__btn" type="button">
+            <a href="#proces" class="hero-options__btn" type="button">
               How it’s made
-            </button>
+          </a>
           </li>
         </ul>
         <div class="scroll-down">
