--- a/src/partials/benefits.html
+++ b/src/partials/benefits.html
@@ -1,4 +1,4 @@
-<section class="benefits">
+<section class="benefits" id="benefits">
   <div class="container">
     <ul class="benefits-list">
       <li class="benefits-list__item">
