--- a/src/partials/ingredients.html
+++ b/src/partials/ingredients.html
@@ -1,4 +1,4 @@
-<section class="ingredients">
+<section class="ingredients" id="ingredients">
   <div class="container">
     <h2 class="ingredients__title">
       IT ALL ADDS UP TO ONE EXCEPTIONAL
