--- a/src/partials/proces.html
+++ b/src/partials/proces.html
@@ -1,4 +1,4 @@
-<section class="proces">
+<section class="proces" id="proces">
   <div class="container">
     <h2 class="proces__title">HOW IT'S <span class="orange">MADE?</span></h2>
     <div class="proces-blocks">
