--- a/src/sass/components/_reviews.scss
+++ b/src/sass/components/_reviews.scss
@@ -1,7 +1,10 @@
 .swiper {
-    height: 288px;
+    height: 335px;
+    @media (min-width:768px) {
+      height: 285px;
+    }
     @media screen and (min-width: 1200px) {
-      height: 297px;
+      height: 285px;
     }
   }
 
@@ -43,11 +46,16 @@
       letter-spacing: 0%;
       text-align: center;
       color: #111111;
-      background-color: #FFFFFF;
+      background-color: #fafafa;
       margin: 0 auto;
-      border-color: 10px getColor("orange");
+      border: 1px solid;
+      border-color: getColor("orange");
       margin-top: 32px;
       
+    }
+
+    &__btn:hover {
+      background-color: getColor("orange");
     }
 
   }
@@ -56,7 +64,7 @@
     &__item {
       width: 335px;
       height: 242px;
-      
+      box-shadow: 0 9px 27px 0 rgba(215, 228, 249, 0.25);
       @media (min-width:768px){
         width: 344px;
         height: 242px;
@@ -76,7 +84,7 @@
     border: 15px;
     background-color: #FFFFFF;
     max-height: 200px;
-    margin-top: 74px;
+    margin-top: 40px;
     @media (min-width:768px) {
       padding: 56px 16px 42px;
     }
@@ -106,6 +114,7 @@
       max-width: 299px;
       color: #111111;
       opacity: 70%;
+      text-align: center;
       @media (min-width:768px) {
         max-width: 312px;
       }
