--- a/src/sass/components/_proces.scss
+++ b/src/sass/components/_proces.scss
@@ -1,11 +1,12 @@
 .proces-blocks {
   display: flex;
+  flex-direction: column;
   padding-bottom: 72px;
   @media screen and (min-width: 768px) {
     padding-bottom: 100px;
   }
   @media screen and (min-width: 1200px) {
-    display: flex;
+    flex-direction: row;
     padding-bottom: 128px;
   }
 }
@@ -54,10 +55,6 @@
 
 .proces-list {
   list-style-type: disc;
-}
-
-.proces-list__item {
-  display: flex;
 }
 
 .proces-list__text {
