--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -13,3 +13,5 @@
 @import './components/reviews';
 @import './components/social';
 @import './components/footer';
+@import './components/review-modal';
+
