rework modal script and add scroll to top

--- a/src/partials/review-modal.html
+++ b/src/partials/review-modal.html
@@ -1,4 +1,4 @@
-<div class="review-backdrop is-hidden" backdrop-review>
+<div class="backdrop-review is-hidden">
   <div class="review-modal">
     <button type="button" class="review-modal__close" data-close-review>
       <svg class="review-modal__icon">
