--- a/src/sass/components/_review-modal.scss
+++ b/src/sass/components/_review-modal.scss
@@ -1,4 +1,4 @@
-.review-backdrop {
+.backdrop-review {
   position: fixed;
   top: 0;
   left: 0;
@@ -10,7 +10,7 @@
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
   z-index: 10;
 }
-.review-backdrop.is-hidden {
+.backdrop-review.is-hidden {
   opacity: 0;
   pointer-events: none;
 }
@@ -23,6 +23,7 @@
   min-width: 320px;
   border-radius: 15px;
   background-color: #fafafa;
+  overflow: auto;
 
   @media (min-width: 768px) {
     padding: 40px;
@@ -171,8 +172,8 @@
     color: #000;
 
     @media (min-width: 768px) {
-        top: 144px;
-      }
+      top: 144px;
+    }
   }
   &__icon {
     width: 24px;
