--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -14,4 +14,6 @@
 @import './components/social';
 @import './components/footer';
 @import './components/review-modal';
+@import './components/scroll-to-top';
+
 
