finish work for this sections

--- a/src/partials/review-modal.html
+++ b/src/partials/review-modal.html
@@ -6,8 +6,9 @@
       </svg>
     </button>
     <h3 class="review-modal__title">
-      LEAVE A REVIEW <br />
-      ABOUT <span class="review-modal__span">OUR CHOCOLATE</span>
+      LEAVE A REVIEW <br class="br1" />
+      ABOUT <br class="br2" />
+      <span class="review-modal__span">OUR CHOCOLATE</span>
     </h3>
     <form class="review-form">
       <input
@@ -24,7 +25,7 @@
         placeholder="Enter your email"
       />
       <input
-        type="number"
+        type="tel"
         class="review-form__input"
         required
         placeholder="Phone number"
