--- a/src/partials/sellers.html
+++ b/src/partials/sellers.html
@@ -94,6 +94,7 @@
           </picture>
         </div>
         <button
+          data-open-buy
           class="sellers-list__btn sellers-list__btn--desktop"
           type="button"
         >
