--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,7 +1,7 @@
 <header class="header" id="header">
   <div class="container">
     <div class="header__pages">
-      <a href="#" class="logo logo--header">
+      <a href="./index.html" class="logo logo--header">
         <span class="logo__span"> SIMPLY</span> CHOCOLATE
 
         <svg class="logo__icon">
@@ -36,14 +36,14 @@
     </div>
     <ul class="header-social">
       <li class="header-social__item">
-        <a href="#" class="header-social__link">
+        <a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer" class="header-social__link">
           <svg class="header-social__icon">
             <use href="./images/icons/symbol-defs.svg#icon-instagram"></use>
           </svg>
         </a>
       </li>
       <li class="header-social__item">
-        <a href="#" class="header-social__link">
+        <a href="https://www.twitter.com/" target="_blank" rel="noopener noreferrer" class="header-social__link">
           <svg class="header-social__icon">
             <use href="./images/icons/symbol-defs.svg#icon-twitter"></use>
           </svg>
