--- a/src/sass/components/_review-modal.scss
+++ b/src/sass/components/_review-modal.scss
@@ -65,8 +65,8 @@
   }
   &__close {
     position: absolute;
-    top: 14px;
-    right: 14px;
+    top: 28px;
+    right: 28px;
     border-radius: 50%;
     width: 28px;
     height: 28px;
@@ -78,16 +78,15 @@
       fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
     @media (min-width: 768px) {
-      width: 28px;
-      height: 28px;
+      width: 30px;
+      height: 30px;
     }
 
     &:hover,
     &:focus {
       background-color: #fcf1e0;
     }
-    &:hover,
-    &:focus .review-modal__icon {
+    &:hover .review-modal__icon {
       fill: getColor('orange');
     }
   }
@@ -114,12 +113,12 @@
     display: block;
     padding: 14px 18px;
     margin-bottom: 14px;
-    border: 1px solid rgba(64, 64, 64, 0.3);
-    border-radius: 15px;
+    border: 1px solid rgba(64, 64, 64, 0.1);
+    border-radius: 13px;
 
     font-family: getFont('Montserrat');
     @include text(13px);
-    color: rgba(64, 64, 64, 0.3);
+    color: rgba(64, 64, 64, 0.1);
 
     @media (min-width: 768px) {
       margin-bottom: 19px;
@@ -138,8 +137,8 @@
     resize: none;
     padding: 14px 18px;
     margin-bottom: 18px;
-    border: 1px solid rgba(64, 64, 64, 0.3);
-    border-radius: 15px;
+    border: 1px solid rgba(64, 64, 64, 0.1);
+    border-radius: 13px;
     width: 100%;
     max-width: 100%;
     height: 91px;
@@ -149,7 +148,7 @@
 
     font-family: getFont('Montserrat');
     @include text(13px);
-    color: rgba(64, 64, 64, 0.3);
+    color: rgba(64, 64, 64, 0.1);
 
     &:focus {
       color: getColor('black');
@@ -158,7 +157,7 @@
   &__btn {
     position: absolute;
     top: 134px;
-    left: 10px;
+    left: 13px;
     border-right: 1px solid rgba(64, 64, 64, 0.3);
     display: flex;
     align-items: center;
@@ -178,5 +177,17 @@
   &__icon {
     width: 24px;
     height: 18px;
+  }
+}
+.br1 {
+  display: block;
+  @media (min-width: 768px) {
+    display: none;
+  }
+}
+.br2 {
+  display: none;
+  @media (min-width: 768px) {
+    display: block;
   }
 }
