add styles buy-modaal

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -5,6 +5,7 @@
 @import './components/header';
 @import './components/burger-menu';
 @import './components/hero';
+@import './components/buy-modal';
 @import './components/benefits';
 @import './components/ingredients';
 @import './components/proces';
