--- a/src/partials/buy-now.html
+++ b/src/partials/buy-now.html
@@ -1,150 +1,141 @@
-<div class="backdrop is-hidden" backdrop-buy>
-  <form class="modal-buy" id="modal">
-    <button class="product-modal__close" data-close-buy type="button">
-      <svg class="modal-close__svg">
+<div class="backdrop-buy is-hidden">
+  <div class="modal-buy">
+    <button class="modal-buy__btn-close" type="button" data-close-buy>
+      <svg class="modal-buy__close-svg">
         <use href="/src/images/icons/symbol-defs.svg#icon-close"></use>
       </svg>
     </button>
-    <h2 class="products-modal__title">
-      <span class="products-modal__title products-modal__title--color"
-        >BUY </span
-      >NOW
+    <h2 class="modal-buy__title">
+      <span class="modal-buy__title modal-buy__title--color">BUY </span>NOW
     </h2>
+    <ul class="buy-list">
+      <li class="buy-list__item">
+        <picture>
+          <source
+            media="(min-width: 768px)"
+            srcset="./images/descbuynow1.png 1x, ./images/descbuynow1@2x.png 2x"
+          />
+          <source
+            media="(max-width: 767px)"
+            srcset="./images/mobbuynow1.png 1x, ./images/mobbuynow1@2x.png 2x"
+          />
 
-    <ul class="products-modal__list">
-      <li class="products-modal__item">
-        <picture>
-          <source
-            media="(min-width: 320px)"
-            srcset="
-              ./src/images/mobbuynow1.png    1x,
-              ./src/images/mobbuynow1@2x.png 2x
-            "
-          />
+          <img src="./images/mobbuynow1.png" class="buy-list__img" alt="100g" />
+        </picture>
 
-          <img
-            src="./src/images/mobbuynow1.png"
-            class="products-modal-item__img"
-            alt="100g"
-          />
-        </picture>
-        <div class="products-modal-item__outline">
-          <p class="products-modal-item__text">100 g</p>
-        </div>
+        <button class="buy-list__grams">100 g</button>
       </li>
-      <li class="product-modal__item">
+      <li class="buy-list__item">
         <picture>
           <source
-            media="(min-width: 320px)"
-            srcset="
-              ./src/images/mobbuynow2.png    1x,
-              ./src/images/mobbuynow2@2x.png 2x
-            "
+            media="(min-width: 768px)"
+            srcset="./images/descbuynow2.png 1x, ./images/descbuynow2@2x.png 2x"
           />
-          <img
-            src="./src/images/mobbuynow2.png"
-            class="products-modal-item__img"
-            alt="200g"
+          <source
+            media="(max-width: 767px)"
+            srcset="./images/mobbuynow1.png 1x, ./images/mobbuynow1@2x.png 2x"
           />
+          <img src="./images/mobbuynow2.png" class="buy-list__img" alt="200g" />
         </picture>
-        <div class="products-modal-item__outline">
-          <p class="products-modal-item__text">200 g</p>
-        </div>
+        <button class="buy-list__grams">200 g</button>
       </li>
-      <li class="product-modal__item slick__slide">
+      <li class="buy-list__item">
         <picture>
           <source
-            media="(min-width: 320px)"
-            srcset="
-              ./src/images/mobbuynow3.png    1x,
-              ./src/images/mobbuynow3@2x.png 2x
-            "
+            media="(max-width: 767px)"
+            srcset="./images/descbuynow3.png 1x, ./images/descbuynow3@2x.png 2x"
           />
-          <img
-            src="./src/images/mobbuynow3.png"
-            class="products-modal-item__img"
-            alt="300g"
+          <source
+            media="(max-width: 768px)"
+            srcset="./images/mobbuynow3.png 1x, ./images/mobbuynow3@2x.png 2x"
           />
+          <img src="./images/mobbuynow3.png" class="buy-list__img" alt="300g" />
         </picture>
-        <div class="products-modal-item__outline">
-          <p class="products-modal-item__text">300 g</p>
-        </div>
+        <button class="buy-list__grams">300 g</button>
       </li>
     </ul>
 
-    <div class="person-info-block">
-      <label class="person-info" for="person__Name"
-        >Personal information
-        <input type="text" placeholder="Name" class="person-info__input" id="person__Name" maxlength="17" required />
-      </label>
-        <input
-          type="text"
-          placeholder="Surname"
-          id="person__Name"
-          class="person-info__second-input"
-          minlength="3"
-          required
-        />
-      
-    </div>
-    <ul class="other-information-list">
-      <li class="other-information-list__item">
-        <label class="other-information-list__label" for="other__Email">
-          Email
+    <form class="buy-now-form">
+      <ul class="buy-now-list">
+        <li class="buy-now-list__item">
+          <h2 class="buy-now-list__title">Personal information</h2>
+          <div class="buy-now-list__person-information">
+            <input
+              type="text"
+              placeholder="Name"
+              class="buy-now-list__input"
+              required
+            />
+
+            <input
+              type="text"
+              placeholder="Surname"
+              class="buy-now-list__input"
+              minlength="3"
+              required
+            />
+          </div>
+        </li>
+
+        <li class="buy-now-list__item">
+          <h2 class="buy-now-list__title">Email</h2>
           <input
             type="text"
             placeholder="Enter your email"
-            class="other-information-list__input"
-            id="other__Email"
+            class="buy-now-list__input"
             minlength="7"
             required
           />
-        </label>
-      </li>
-      <li class="other-information-list__item">
-        <label class="other-information-list__label" for="other__Tel"
-          >Phone number
+        </li>
+        <li class="buy-now-list__item buy-now-list__item--tel">
+          <h2 class="buy-now-list__title">Phone number</h2>
+          <div class="phone-container">
+            <svg class="phone-container__svg">
+              <use href="/src/images/icons/symbol-defs.svg#icon-Ukraine" >
+              </use>
+            </svg>
+            <p class="phone-container__text"></p>
+          </div>
           <input
             type="text"
             placeholder="Phone number"
-            class="other-information-list__input"
+            class="buy-now-list__input buy-now-list__input--tel"
             id="other__Tel"
             maxlength="40"
             minlength="5"
             required
           />
-        </label>
-      </li>
-      <li class="other-information-list__item">
-        <label class="other-information-list__label" for="other__Card"
-          >Card number
+        </li>
+        <li class="buy-now-list__item buy-now-list__item--card">
+          <div class="card-container">
+            <svg class="card-container__svg">
+              <use href="/src/images/icons/symbol-defs.svg#icon-mastercard" ></use>
+            </svg>
+            <p class="card-container__text"></p>
+          </div>
+          <h2 class="buy-now-list__title">Card number</h2>
           <input
             type="text"
             placeholder="Enter card"
-            class="other-information-list__input"
-            id="other__Card"
+            class="buy-now-list__input buy-now-list__input--cardnum"
             minlength="7"
             required
           />
-          <svg class="other-information-list-label__svg">
-            <use href="./src/images/icons/symbol-defs.svg#icon-mastercard"></use>
-          </svg>
-        </label>
-      </li>
-      <li class="other-information-list__item">
-        <label class="other-information-list__label" for="other__Comment"
-          >Comment
+        </li>
+        <li class="buy-now-list__item">
+          <h2 class="buy-now-list__title">Comment</h2>
           <textarea
             placeholder="Enter text"
-            class="other-information-list__textarea"
-            id="other__Comment"
+            class="buy-now-list__textarea"
+            pattern="[0-9]{4}-[0-9]{4}-[0-9]{4}-[0-9]{4}"
+            title="xxxx-xxxx-xxxx-xxxx"
             maxlength="1200"
           ></textarea>
-        </label>
-      </li>
-    </ul>
-    <button type="submit" class="modal-btn-submit" data-open-discount>
-      Submit
-    </button>
-  </form>
+        </li>
+      </ul>
+      <button type="submit" class="buy-now-form__btn" data-open-thanks>
+        Submit
+      </button>
+    </form>
+  </div>
 </div>
